--- a/styles/base.css
+++ b/styles/base.css
@@ -1,54 +1,137 @@
 header {
-    display: grid;
-    grid-template-rows: 3fr 2fr;
+    background-color: #0d67b5;
+    text-align: center;
     width: 100%;
     max-width: 1600px;
+}
+
+h1, h2 {
+    padding-left: 10px;
+    padding-top: 10px;
 }
 
 nav {
-    background-color: aliceblue;
     display: flex;
-    justify-content: space-around;
-}
-
-.home-link {
-    display: flex;
+    background-color: #fff;
+    padding: 5px;
     justify-content: center;
+    align-content: space-evenly;
 }
 
-body {
-    width: 100%;
+nav a {
+    flex: 1;
+    padding: 15px;
+    text-align: center;
+    color: #0d67b5;
+}
+
+nav a:hover {
+    color: #fff;
+    background-color: #0d67b5;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
     max-width: 1600px;
 }
 
-.home-grid {
-    display: grid;
-    grid-template-columns: 4fr 2fr;
+.about {
+    display: flex;
+    padding: 15px;
 }
 
-.self_portrait {
+.about_me_card .about p {
+    padding: 20px;
+    text-align: left;
+    font-size: 1.5em;
+}
+
+.about_me_card .about img {
+    width: 35%;
+    float: right;
+}
+
+.title {
+    background-color: #0d67b5;
+    color: #fff;
+    border-radius: 10px;
+    margin: 5px;
+}
+
+.about_me_card {
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 15px;
+}
+
+.country {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.about_me_card h2 {
+    text-align: center;
+    text-decoration: underline;
+    padding: 15px;
+    border-bottom: 2px solid #000;
+}
+.about_me_card .country p {
+    padding: 20px;
+    text-align: left;
+    font-size: 1.5em;
+}
+
+.about_me_card .country img {
     width: 200px;
+    height: auto;
+    float: left;
 }
 
-.flag {
-    width: 500px;
-    grid-column: 0 / 1;
+.resources_card {
+    border: 1px solid #000;
+    padding-top: 10px;
+    margin: 10px;
+    border-radius: 15px;
 }
 
-.about_me {
-display: grid;
-grid-template-columns: 3fr 1fr;
+.resources_card h2 {
+    text-align: center;
+    text-decoration: underline;
+    color: #fff;
+    padding: 15px;
 }
 
-.city {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    }
-
-.about_me p {
-grid-column: 0 / 3;
+.resources_card a {
+    display: flex;
+    text-align: left;
+    color: #0d67b5;
+    font-size: 1.5em;
 }
 
-.flag p {
+.resources_card a:hover {
+    color: #fff;
+    background-color: #0d67b5;
+}
 
+.content {
+    padding: 15px;
+    display: flex;
+}
+
+footer {
+    text-align: center;
+    color: #fff;
+    background-color: #0d67b5;
+    border-radius: 10px;
+    padding: 2px;
+    width: 100%;
+    max-width: 1600px;
+    font-size: 2em;
+}
+
+.red {
+    font-style: italic;
+    color: #fff;
 }
